2000-05-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* lots_of_files: changed most #ifndef WIN32 to #ifdef XWIN since that's what
	they were supposed to mean
	* gamedat.cc, Configuration.cc: some preliminary BEOS things

2000-05-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, Audio.h, win_MCI.h, win_MCI.cc: Windows MIDI repeating support

2000-05-19  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Blank screen after intro...

2000-05-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Improved rendering when climbing stairs.
	* Realized Usecode array-opcode 0x4e means 'increment frame'.
	* Improved object placement within backpacks.

2000-05-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, win_MCI.cc: preliminary work on Windows Midi repeats

2000-05-18  Jeff Freedman  <jeff@patches.simutech.com>

	* Save/restore working as of last night.
	* Have Avatar 'run' when shift key is down.

2000-05-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: defined __STRING if not yet defined (e.g. in mingw32)
	* configure.in: added flic library to windows section
	
2000-05-16  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Load correct palettes for intro. Implement palette fade 
	out/in

2000-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: F4 toggles fullscreen (Windows & Linux)

2000-05-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Midi.cc: fix to windows playing MIDI only once
	* fnames.h: included MIDITMPFILE

2000-05-11  Tristan Tarrant  <tarrant_tristan@emc.com>

	* utils.cc: Implemented Switch_slash which takes care of using
	backslashes instead of slashes in Windows filenames...
	* fnames.h: Removed the duplication of filenames with backslashes

2000-05-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc: dirty fix to visual artifacting (see mailing list)
	* objs.cc: reverted anim. code to earlier state
	* imagewin.cc, exult.cc: pressing Enter will toggle fullscreen